RESOLVED FIXED134768
[MSE] http/tests/media/media-source/mediasource-remove.html is failing
https://bugs.webkit.org/show_bug.cgi?id=134768
Summary [MSE] http/tests/media/media-source/mediasource-remove.html is failing
Jer Noble
Reported 2014-07-09 09:05:31 PDT
[MSE] http/tests/media/media-source/mediasource-remove.html is failing
Attachments
Patch (14.55 KB, patch)
2014-07-09 09:06 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2014-07-09 09:06:50 PDT
Eric Carlson
Comment 2 2014-07-09 10:35:08 PDT
Comment on attachment 234641 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=234641&action=review > Source/WebCore/Modules/mediasource/SourceBuffer.cpp:579 > + // and the next sync sample frame are removed. But we must start from the first sample in decode order, not > + // presentation order. Having this comment just before the code that calculates and compares removePresentationStart really confused me at first. Maybe put it after?
Jer Noble
Comment 3 2014-07-09 13:51:20 PDT
Comment on attachment 234641 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=234641&action=review >> Source/WebCore/Modules/mediasource/SourceBuffer.cpp:579 >> + // presentation order. > > Having this comment just before the code that calculates and compares removePresentationStart really confused me at first. Maybe put it after? Sure.
Jer Noble
Comment 4 2014-07-09 14:37:43 PDT
Note You need to log in before you can comment on or make changes to this bug.